force-app/objects/TAG_Approval_List__c/TAG_Approval_List__c.object-meta.xml
<CustomObject>
    <description>An approval list record is a batch of potential target companies for a buyer.</description>
    <label>Approval List</label>
    <nameField>
        <displayFormat>Approval List-{0000}</displayFormat>
        <label>Approval List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>