force-app/objects/TAG_Approval_List__c/fields/TAG_Approval_List_Name__c.field-meta.xml
<CustomField>
    <fullName>TAG_Approval_List_Name__c</fullName>
    <description>This is a manually managed field for Tremila users to identify what approval list this is.</description>
    <label>Approval List Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>