force-app/objects/TAG_Approval_List__c/fields/TAG_Approval_List_Returned__c.field-meta.xml
<CustomField>
    <fullName>TAG_Approval_List_Returned__c</fullName>
    <description>The date the approval list was returned from the buyer account. This field is updated automatically via flow automation.</description>
    <inlineHelpText>The date the approval list was returned from the buyer account.</inlineHelpText>
    <label>Approval List Returned</label>
    <type>Date</type>
</CustomField>