force-app/objects/TAG_Approval_List__c/fields/TAG_Approval_List_Sent__c.field-meta.xml
<CustomField>
    <fullName>TAG_Approval_List_Sent__c</fullName>
    <description>The date the approval list was sent to the buyer account. This field is updated automatically via flow automation.</description>
    <inlineHelpText>The date the approval list was sent to the buyer account.</inlineHelpText>
    <label>Approval List Sent</label>
    <type>Date</type>
</CustomField>