force-app/objects/TAG_Approval_List__c/fields/TAG_Project__c.field-meta.xml
<CustomField>
    <fullName>TAG_Project__c</fullName>
    <description>This field denotes which project record this Approval List record is associated with.</description>
    <label>Project</label>
    <referenceTo>TAG_Project__c</referenceTo>
    <relationshipLabel>Approval Lists</relationshipLabel>
    <relationshipName>Approval_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>