force-app/objects/TAG_Approval_List__c/listViews/Researching.listView-meta.xml
<ListView>
    <fullName>Researching</fullName>
    <columns>NAME</columns>
    <columns>TAG_Approval_List_Name__c</columns>
    <columns>TAG_Status__c</columns>
    <columns>TAG_Target_Date__c</columns>
    <columns>TAG_Approval_List_Sent__c</columns>
    <columns>TAG_Approval_List_Returned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TAG_Status__c</field>
        <operation>equals</operation>
        <value>Researching</value>
    </filters>
    <label>Researching</label>
</ListView>